fixed select bg on mobile, and fixed aria label id

--- a/dev/scss/husky100.scss
+++ b/dev/scss/husky100.scss
@@ -31,7 +31,7 @@
     }
 
     .udub-slant {
-      margin: 0;
+      margin: 25px 0 0 0;
     }
 
     p {
@@ -915,6 +915,7 @@
 
         select {
           margin: 0;
+          background: white;
         }
       }
     }
